--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/Login_Register_styles.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <div class="container_login">
@@ -30,7 +30,7 @@
                 <p>Usuario</p>
                 <input type="text" id="" name="nombre" value="">
 
-                <p>contraseña</p>
+                <p>Contraseña</p>
                 <input type="password" id="" name="color" value="">
             </form>
 
