--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/Login_Register_styles.css">
+    <link rel="stylesheet" href="./css/register.css">
 </head>
 <body>
     <div class="container_login">
@@ -27,16 +27,20 @@
 
         <div class="inputform">
             <form action="">
-                <p>Usuario</p>
-                <input type="text" id="" name="nombre" value="">
 
-                <p>contraseña</p>
-                <input type="password" id="" name="color" value="">
+                <p>Nombre</p>
+                <input type="text" id="" name="name" value="">
+
+                <p>Usuario</p>
+                <input type="text" id="" name="user" value="">
+
+                <p>Contraseña</p>
+                <input type="password" id="" name="password" value="">
             </form>
 
             <button class="enter">
                 <a href="NEXT PAGE">
-                    <h1>Ingresar</h1>
+                    <h1>Registrar</h1>
                 </a>
                 
             </button>          
